--- a/violet-master/shopping-cart.html
+++ b/violet-master/shopping-cart.html
@@ -225,6 +225,29 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-12 text-right">
+                                    <a href="#"<div class="total-info">
+                            <div class="total-table">
+                                <table>
+                                    <thead>
+                                        <tr>
+                                            <th>Total</th>
+                                            <th>Subtotal</th>
+                                            <th>Shipping</th>
+                                            <th class="total-cart">Total Cart</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td class="total">$29</td>
+                                            <td class="sub-total">$29</td>
+                                            <td class="shipping">$10</td>
+                                            <td class="total-cart-p">$39</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-12 text-right">
                                     <a href="#" class="primary-btn chechout-btn">Proceed to checkout</a>
                                 </div>
                             </div>
